# TorontoRaccoonStation

./: .gitignore  AGENT.md  README.md  agent.md  alembic.ini  pyproject.toml  test_redis_postgresql.py
.codex/skills/writing-plans/: SKILL.md
app/: main.py
app/api/: router.py
app/api/v1/: AGENT.md  booking_actions.py  booking_details.py  bookings.py  clients.py  dms.py  rooms.py  router.py  (+6 more)
app/core/: __init__.py  config.py  database.py  dependencies.py  errors.py
app/schema/: AGENT.md
app/schemas/: AGENT.md  booking.py  client.py  common.py  dm.py  room.py  script.py  script_character.py  slot.py  store.py
app/services/: AGENT.md  base.py  booking_service.py  character_client_match_service.py  character_dm_match_service.py  client_service.py  conflict_service.py  dm_service.py  room_service.py  script_character_service.py  script_service.py  slot_service.py  store_service.py
docs/plans/: 2026-02-07-store-scheduler-api-design.md
ios_frontend/: .gitignore  app.json  jest.config.js  package-lock.json  package.json
ios_frontend/app/: _layout.tsx  index.tsx  sign-in.tsx
ios_frontend/src/: config.ts
migrations/: README  env.py
migrations/versions/: 0001_store_scheduler_core.py  0002_booking_match_model.py  0003_script_cover_storage_key.py  0004_pic_storage_key_standardization.py
tests/: test_booking_service.py  test_character_client_match_service.py  test_character_dm_match_service.py  test_client_service.py  test_dm_service.py  test_room_service.py  test_script_character_service.py  test_script_service.py  test_slot_service.py  test_store_service.py
(+12 files in other folders)
