[project]
name = "racoon-scripted-roleplay-platform"
version = "0.1.0"
description = "Scripted roleplay carpool & scheduling platform (FastAPI + Postgres + Redis)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Kaiwen Shen" }]

dependencies = [
  # Web
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",

  # DB (async)
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",

  # Redis
  "redis>=5.0",

  # Auth / Security (optional but common)
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",

  # Logging
  "structlog>=24.1",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.5",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "types-redis>=4.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
